--- a/labs/Lab_Book_2_PPF.ipynb
+++ b/labs/Lab_Book_2_PPF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab Book 2 PPF.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNqHBVdRDOGW/hVEMY5f2iM",
+      "authorship_tag": "ABX9TyOhiI4Rf/bCPsNAieZlMlv0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -652,7 +652,7 @@
       "source": [
         "If you haven't already, follow the instructions [here](https://hackmd.io/@sim/ByCohmeVF) to set up Python and Visual Studio Code on your computer.\n",
         "\n",
-        "This task is worth no marks, but you will need it for this week's lecture and next week's tutorial and lab."
+        "This task is worth no marks, but you will need it for Week 4 onwards and the Web Apps lab book."
       ]
     },
     {
