--- a/labs/Lab_Book_2_PPF.ipynb
+++ b/labs/Lab_Book_2_PPF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab Book 2 PPF.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhiI4Rf/bCPsNAieZlMlv0",
+      "authorship_tag": "ABX9TyPIfJ65mDPeJcRTvx4oKXJv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,7 +133,7 @@
         "id": "kSEPwh9MEbeq"
       },
       "source": [
-        "You are asked to find the 42nd character in this string. You think to yourself, \"There are two possible interpretations to this question.\""
+        "You are asked to find the 19th character in this string. You know that all letters, spaces and punctuation are considered characters. You think to yourself, \"There are two possible interpretations to this question.\"\n"
       ]
     },
     {
@@ -173,7 +173,7 @@
         "id": "ve5lsw0M4O7x"
       },
       "source": [
-        ""
+        "*explanation goes here*"
       ]
     },
     {
