--- a/tutes/10-tute.ipynb
+++ b/tutes/10-tute.ipynb
@@ -86,6 +86,17 @@
         "\n",
         "If you have any tutorial questions remaining from this term, this is your chance to get them answered."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Lab Work\n",
+        "\n",
+        "Reminder: Your project reflections are due by Saturday night. (See lab submission schedule for a link to the form.)"
+      ],
+      "metadata": {
+        "id": "94LT2rSMpZwn"
+      }
     }
   ]
 }
