--- a/tutes/10-tute.ipynb
+++ b/tutes/10-tute.ipynb
@@ -92,7 +92,12 @@
       "source": [
         "## Lab Work\n",
         "\n",
-        "Reminder: Your project reflections are due by Saturday night. (See lab submission schedule for a link to the form.)"
+        "Reminder: Your project reflections are due by Saturday night. (See lab submission schedule for a link to the form.)\n",
+        "\n",
+        "You may use the lab time this week to work on (and ask your tutor about):\n",
+        "* Project\n",
+        "* Project reflection\n",
+        "* Practice exam"
       ],
       "metadata": {
         "id": "94LT2rSMpZwn"
