--- a/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/scaffold/04-collections.ipynb
@@ -6,7 +6,7 @@
       "name": "04-collections.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMvHIPyrCW9gEB0JuYQn/QC",
+      "authorship_tag": "ABX9TyM/Thja0K5XQOZv04jnEe2x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1005,6 +1005,51 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_NZ3hENDnVP"
+      },
+      "source": [
+        "# 7 - Data Types Revisited: NoneType\n",
+        "\n",
+        "`None` is a special value in Python we can use to represent values that are unknown.\n",
+        "\n",
+        "**Important Info**:\n",
+        "\n",
+        "* The type of `None` is `NoneType`. It is the only value of that type.\n",
+        "* Python has special support for dealing with `None` values in `if` statements."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "scgOs3yeDtti"
+      },
+      "source": [
+        "Write a function `maximum(numbers)` that finds the maximum number in a list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EkigXAXzDvyf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y27MaZHDvUF_"
+      },
+      "source": [
+        "Copy the table from topic 3.1.6: Data Types here, and fill in an extra row for the `NoneType` data type."
+      ]
     }
   ]
 }
