--- a/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
+++ b/lectures/03-python-and-programming-fundamentals/04-collections.ipynb
@@ -6,7 +6,7 @@
       "name": "04-collections.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMvnJNV0rK5VoLXkyr5kN7g",
+      "authorship_tag": "ABX9TyNa93W6W3yN0zOy2pg5b+/1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
       "source": [
         "insects = []"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +134,7 @@
       "source": [
         "print(insects)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "HlXJQLT815FD"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "insects.append('grasshopper')\n",
         "print(insects)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "source": [
         "print(len(insects))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -266,7 +266,7 @@
         "insects.insert(0,'praying mantis')\n",
         "print(insects)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,7 +323,7 @@
         "insects.sort(reverse=True)\n",
         "print(insects)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +357,7 @@
         "print(f\"ladybug occurs {insects.count('ladybug')} times.\")\n",
         "print(f\"locusts occurs {insects.count('locusts')} times.\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +413,7 @@
       "source": [
         "print(insects[2])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -446,7 +446,7 @@
       "source": [
         "print(insects[10])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -473,7 +473,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -506,7 +506,7 @@
         "insects[1] = \"beetle\"\n",
         "print(insects)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +539,7 @@
         "insects.pop()\n",
         "print(insects)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,7 +563,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +587,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -620,7 +620,7 @@
         "insects.clear()\n",
         "print(insects)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,7 +661,7 @@
         "assert months_of_year(13) == \"\"\n",
         "assert months_of_year(\"hi\") == \"\""
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +680,7 @@
         "    else:\n",
         "        return \"\""
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -703,7 +703,7 @@
         "              \"July\", \"August\", \"September\",\\\n",
         "              \"October\", \"November\", \"December\"]\n"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -777,7 +777,7 @@
         "for month in months:\n",
         "    print(month)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -824,7 +824,7 @@
         "list3 = list1 + list2\n",
         "print(list3)"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
         "           ['PHYS1101']\n",
         "]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -872,7 +872,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -895,7 +895,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -918,7 +918,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,7 +945,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1542,6 +1542,51 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E_NZ3hENDnVP"
+      },
+      "source": [
+        "# 7 - Data Types Revisited: NoneType\n",
+        "\n",
+        "`None` is a special value in Python we can use to represent values that are unknown.\n",
+        "\n",
+        "**Important Info**:\n",
+        "\n",
+        "* The type of `None` is `NoneType`. It is the only value of that type.\n",
+        "* Python has special support for dealing with `None` values in `if` statements."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "scgOs3yeDtti"
+      },
+      "source": [
+        "Write a function `maximum(numbers)` that finds the maximum number in a list."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EkigXAXzDvyf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y27MaZHDvUF_"
+      },
+      "source": [
+        "Copy the table from topic 3.1.6: Data Types here, and fill in an extra row for the `NoneType` data type."
+      ]
     }
   ]
 }
