Added extra loops practice

--- a/labs/Lab_Book_2_PPF.ipynb
+++ b/labs/Lab_Book_2_PPF.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Lab Book 2 PPF.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPIfJ65mDPeJcRTvx4oKXJv",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM8kynAMHfAYuDHQP92wAOR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -598,6 +599,35 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Extra Practice (Loops and Conditionals)\n",
+        "\n",
+        "For those of you who are wanting/needing more practice with loops, here are some resources. Each of these websites also have practice for other topics in Python too.\n",
+        "\n",
+        "Here are some websites which have extra Python questions (often with solutions) for you to practice.\n",
+        "\n",
+        "https://pynative.com/python-if-else-and-for-loop-exercise-with-solutions/\n",
+        "\n",
+        "https://www.w3resource.com/python-exercises/python-conditional-statements-and-loop-exercises.php\n",
+        "\n",
+        "https://holypython.com/intermediate-python-exercises/exercise-8-python-for-loop/\n",
+        "\n",
+        "https://pythonbasics.org/for-loops/\n",
+        "\n",
+        "https://pythonlobby.com/python-loop-exercises-with-solution-for-loop-while-loop/\n",
+        "\n",
+        "https://www.zframez.com/tutorials/python-tutorial-and-exercises-p2.html\n",
+        "\n",
+        "http://tutors.ics.uci.edu/index.php/79-python-resources/118-python-for-exercises\n",
+        "\n",
+        "You may ask any questions about these questions on the forum and help each other answer them."
+      ],
+      "metadata": {
+        "id": "EnnUOtYLX4Qs"
+      }
     },
     {
       "cell_type": "markdown",
