--- a/labs/Lab_Book_2_PPF.ipynb
+++ b/labs/Lab_Book_2_PPF.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab Book 2 PPF.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM8kynAMHfAYuDHQP92wAOR",
+      "authorship_tag": "ABX9TyP9Cel9mhTL+HLA96DsuQ9w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -680,7 +680,7 @@
         "id": "PDGGPQIplTos"
       },
       "source": [
-        "If you haven't already, follow the instructions [here](https://hackmd.io/@sim/ByCohmeVF) to set up Python and Visual Studio Code on your computer.\n",
+        "If you haven't already, follow the instructions shared in the lectures to set up Python and Visual Studio Code on your computer.\n",
         "\n",
         "This task is worth no marks, but you will need it for Week 4 onwards and the Web Apps lab book."
       ]
