Added user interface section

--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -48,7 +48,7 @@
         "\n",
         "## Problem statement\n",
         "\n",
-        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Don't just describe what your program does. Focus on the purpose of your program. How is your application going to improve someone's life, or make their life easier? Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
+        "*Give a brief description of the problem you are trying to solve. Don't include any technical details. Don't just describe what your program does. Focus on the purpose of your program. Your description should be understandable to a reader with no technical background or domain knowledge.*\n",
         "\n",
         "## Background\n",
         "\n",
@@ -60,7 +60,23 @@
         "\n",
         "## Minimum Viable Product/Prototype\n",
         "\n",
-        "*Consider what the simplest solution to the problem above would be. For this project, you are not required to produce a completely polished product fit for general use, but you should still take into account usability when deciding viability. In this section, describe a version of your application with the fewest possible features, but which would still be useful to the target users.*"
+        "*Consider what the simplest solution to the problem above would be. For this project, you are not required to produce a completely polished product fit for general use, but you should still take into account usability when deciding viability. In this section, describe a version of your application with the fewest possible features, but which would still be useful to the target users.*\n",
+        "\n",
+        "## User Interface Design (added on 27th June 2020)\n",
+        "\n",
+        "*Create images of what the user will see as they use your MVP.*\n",
+        "\n",
+        "*For the MVP (Minimum Viable Product) what would the user see when they first open your application? What different actions could they take? What would they be shown next? Include all elements of the display, inputs, buttons which would be shown on the screen.*\n",
+        "\n",
+        "*We expect between 2 and 4 displays for each project, but the exact number of displays/impages depends on your project. Label/annotate each display as needed so that a person unfamiliar with your project can see what you intend to implement.*\n",
+        "\n",
+        "*The drawings may be done:*\n",
+        " - *by hand (take photos of the hand-drawn images to get them onto your computer)*\n",
+        " - *using any computer application*\n",
+        " \n",
+        "*The images should then be either:*\n",
+        " - *embedded into this document*\n",
+        " - *included as separate, well-labelled (eg screen1.jpg, screen2.jpg etc) in the zip file you're submitting. (Separate files must be of type .jpg, .jpeg or .png.)*\n"
       ]
     },
     {
@@ -95,7 +111,12 @@
       "source": [
         "## \"Nice to have\" features\n",
         "\n",
-        "*Describe any additional features that would improve the experience of using your prototype for the target users. These features should not be strictly necessary for the prototype to be useful, but may include things most users would expect as standard. This could include things like: being able to register an account, saving user preferences, or social media integration. Features should be itemized with dot points or numbered.* "
+        "*Describe any additional features that would improve the experience of using your prototype for the target users. These features should not be strictly necessary for the prototype to be useful, but may include things most users would expect as standard. This could include things like: being able to register an account, saving user preferences, or social media integration. Features should be itemized with dot points or numbered.* \n",
+        "\n",
+        "* Feature 1\n",
+        "* Feature 2\n",
+        "* Feature 3\n",
+        "* ..."
       ]
     },
     {
@@ -106,7 +127,12 @@
       "source": [
         "## Stretch goals\n",
         "\n",
-        "*Include here any features that would make your prototype really shine, but which you are not confident you can implement in the time available for this project. Don't be afraid to be ambitious in selecting stretch goals. See the marking scheme for the final prototype for information on what marks are available for completing stretch goals. Stretch goals should be itemized with dot points or numbered.* "
+        "*Include here any features that would make your prototype really shine, but which you are not confident you can implement in the time available for this project. Don't be afraid to be ambitious in selecting stretch goals. See the marking scheme for the final prototype for information on what marks are available for completing stretch goals. Stretch goals should be itemized with dot points or numbered.* \n",
+        "\n",
+        "* Goal 1\n",
+        "* Goal 2\n",
+        "* Goal 3\n",
+        "* ..."
       ]
     },
     {
@@ -125,7 +151,8 @@
         "| Background includes information necessary for building a prototype (2 mark)       |      | |\n",
         "| Appropriate set of target users (1 marks)                                         |      | |\n",
         "| MVP is both minimal and viable (1 marks)                                          |      | |\n",
-        "| Code in feasibility demonstration produces an appropriate result (3 marks)        |      | |\n",
+        "| The user interface design clearly conveys what will be visible upon completion of the MVP implementation (1 mark) | | |\n",
+        "| Code in feasibility demonstration produces an appropriate result (2 marks)        |      | |\n",
         "| Comprehensive list of \"nice to have\" features (1 mark)                            |      | |\n",
         "| Appropriate ambitious stretch goals (1 mark)                                      |      | |\n"
       ]
