--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -62,13 +62,13 @@
         "\n",
         "*Consider what the simplest solution to the problem above would be. For this project, you are not required to produce a completely polished product fit for general use, but you should still take into account usability when deciding viability. In this section, describe a version of your application with the fewest possible features, but which would still be useful to the target users.*\n",
         "\n",
-        "## User Interface Design (added on 27th June 2020)\n",
+        "## User Interface Design\n",
         "\n",
         "*Create images of what the user will see as they use your MVP.*\n",
         "\n",
         "*For the MVP (Minimum Viable Product) what would the user see when they first open your application? What different actions could they take? What would they be shown next? Include all elements of the display, inputs, buttons which would be shown on the screen.*\n",
         "\n",
-        "*We expect between 2 and 4 displays for each project, but the exact number of displays/impages depends on your project. Label/annotate each display as needed so that a person unfamiliar with your project can see what you intend to implement.*\n",
+        "*We expect 2 to 4 displays for each project, but the exact number of displays/impages depends on your project. Label/annotate each display as needed so that a person unfamiliar with your project can see what you intend to implement.*\n",
         "\n",
         "*The drawings may be done:*\n",
         " - *by hand (take photos of the hand-drawn images to get them onto your computer)*\n",
@@ -87,7 +87,14 @@
       "source": [
         "## Demonstration of feasibility\n",
         "\n",
-        "*Describe a core feature of your prototype application and provide a demonstration of how that feature may work in the code cell below (you can add further code cells if you wish). For example, if your application gets data from an external source, write code here that does that so you can demonstrate it is feasible. Similarly, if your application relies on you implementing an algorithm, using a library we haven't covered in the course, or generating images/visualisations, write code here does that.*\n",
+        "* *Describe a core feature of your application.*\n",
+        "* *Provide a demonstration of how that feature may work in the code cell below (you can add further code cells if you wish).*\n",
+        "\n",
+        "*Write code to demonstrate that a feature of your prototype is feasible to implement in Python.*\n",
+        "\n",
+        "*What feature you implement (or partially implement) depends on your project, but as a general guide, it should be one of the ways in which your program either retrieves, processes, or displays information.*\n",
+        "\n",
+        "*For example, if your application gets data from an external source, write code here that does that so you can demonstrate it is feasible. Similarly, if your application relies on you implementing an algorithm, using a library we haven't covered in the course, or generating images/visualisations, write code here does that.*\n",
         "\n",
         "*Your code must compile and run in order to get these marks. If you need to submit this section in an external file, indicate that here.*"
       ]
@@ -97,9 +104,7 @@
       "metadata": {
         "id": "8DPwu2GCPf5_"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
