Updated demo of feas to include all info

--- a/project/proposal.ipynb
+++ b/project/proposal.ipynb
@@ -96,6 +96,8 @@
         "\n",
         "*For example, if your application gets data from an external source, write code here that does that so you can demonstrate it is feasible. Similarly, if your application relies on you implementing an algorithm, using a library we haven't covered in the course, or generating images/visualisations, write code here does that.*\n",
         "\n",
+        "*If your MVP does not require any algorithms or libraries which we haven't done in the course, you may choose instead use this opportunity to implement most or all of your MVP in a simple, functional way. This will leave time in the coming weeks for you to research and implement a more interesting NTH or SG in the coming weeks.*\n",
+        "\n",
         "*Your code must compile and run in order to get these marks. If you need to submit this section in an external file, indicate that here.*"
       ]
     },
