Updated for 22T3 staggered learning.

--- a/tutes/03-tute.ipynb
+++ b/tutes/03-tute.ipynb
@@ -53,9 +53,7 @@
       "metadata": {
         "id": "9wlSvh_h7lYi"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -73,9 +71,7 @@
       "metadata": {
         "id": "nMxAFp2BrDU5"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -93,9 +89,7 @@
       "metadata": {
         "id": "CcyHxD-l7skT"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -165,6 +159,8 @@
       },
       "source": [
         "## Dictionaries\n",
+        "\n",
+        "**For 22T3 we did not cover this in week 3. This question will be moved to week 4. Instead, do the Project question below, and then as a class, choose some questions from the [Extra Practice](https://webcms3.cse.unsw.edu.au/COMP1010/22T3/resources/81617) material to further consolidate your skills around loops, functions and lists.**\n",
         "\n",
         "Using a dictionary and a loop, write a Python program which asks the user to enter their total marks for a course, and then prints out:\n",
         "\n",
