--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5h4vP3D2KqPtp3XsHoMuF",
+      "authorship_tag": "ABX9TyMs+gg9RpOKOzOFCYXavbid",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "id": "6YYCctbH6c4q",
         "outputId": "1e50c846-5015-45b3-fa5a-f99e5fdab130"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "id": "cOVz6gZ9-8Hi",
         "outputId": "13e8524a-f32f-46e7-c158-f10d67011d4d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -114,6 +114,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "age = input(\"Enter your age: \")\n",
+        "# Step 1 check if age is an integer\n",
+        "if age.isnumeric():\n",
+        "    # If it is, we can change it to an int\n",
+        "    #age = int(age) # if we don't convert age to an int, we can't subtract it on line 7\n",
+        "    print(\"You can get a senior citizen card in \")\n",
+        "    print(65-age)\n",
+        "    print(\"years\")\n",
+        "else:\n",
+        "    print(\"You did not enter a number. That cannot be your age.\")"
+      ],
+      "metadata": {
+        "id": "MGnP4f_YRqYT"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
