--- a/lectures/23T0-Debugging.ipynb
+++ b/lectures/23T0-Debugging.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMs+gg9RpOKOzOFCYXavbid",
+      "authorship_tag": "ABX9TyOSFO5OpQrF/A7JHbgjVfL2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,13 +127,40 @@
         "    print(65-age)\n",
         "    print(\"years\")\n",
         "else:\n",
-        "    print(\"You did not enter a number. That cannot be your age.\")"
+        "    print(\"You did not enter a number. That cannot be your age.\")\n",
+        "\n",
+        "# The problem is that you can't subtract a string from an int. TypeError (because only an int or float can be subtracted from an int.)"
       ],
       "metadata": {
-        "id": "MGnP4f_YRqYT"
+        "id": "MGnP4f_YRqYT",
+        "outputId": "d999bb3e-682e-4db3-f4b4-48cedca73078",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 274
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your age: 15\n",
+            "You can get a senior citizen card in \n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-cc973c3f1b21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m#age = int(age) # if we don't convert age to an int, we can't subtract it on line 7\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"You can get a senior citizen card in \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m65\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"years\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'int' and 'str'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
