--- a/lectures/23T0-Lecture_PPF_1.ipynb
+++ b/lectures/23T0-Lecture_PPF_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEnFJGnSb4ZTZpGTSvJpQH",
+      "authorship_tag": "ABX9TyO6W9xdwXeXNdcv1lN2TGl5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -85,7 +85,7 @@
         "id": "9HV_bA5IC7uw",
         "outputId": "488e4fc4-30f7-4620-d36b-548e679321ff"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -132,7 +132,7 @@
         "id": "TlsdZDAJDZcc",
         "outputId": "810f15f1-9e6f-4f5c-f093-abbd4c894924"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -169,7 +169,7 @@
         "id": "pQBHzaoLEJgh",
         "outputId": "e9e2cf01-17fa-43b9-add4-30264a1ae46c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -192,7 +192,7 @@
         "id": "vAgz2MlhEaWZ",
         "outputId": "2713554e-9f7c-4d72-8f4b-342b4a8f2395"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
         "id": "hfVCLXC7EiKH",
         "outputId": "92b9b68d-34e2-4bbf-cf72-7583e08aff3d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +274,7 @@
         "id": "MXEY_bdBGLNg",
         "outputId": "12e948c6-051f-4293-9c93-c3d7965be4a7"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -356,6 +356,15 @@
       ],
       "metadata": {
         "id": "pwVLFvcgHLX1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "smoething here?"
+      ],
+      "metadata": {
+        "id": "eNh4Ol__7YLW"
       }
     }
   ]
